@@ -43,6 +43,7 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
 + rfe #1694104 Allow logging of user status with Apache.
 - patch #2649087 None default is different than other None in some languages.
 + [lang] Chinese Simplified update, thanks to Shanyan Baishui - rimyxp 
+- patch #2550286 [display] Sort arrows problem, thanks to Virsacer - virsacer
 
 3.1.4.0 (not yet released)
 + patch #1808339 [doc] Apache SSLOptions and StdEnvVars FAQ,
